# protobuf-decoder

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  index.html  params.json
macosx/: Info.plist
src/: CMakeLists.txt  main.cpp
src/conversion/: ConversionException.hpp  ConversionInterface.hpp  ProtoBufConverter.cpp  ProtoBufConverter.hpp  UpperLowerCaseConverter.cpp  UpperLowerCaseConverter.hpp
src/conversion/algorithm/: AlgorithmException.hpp  Base64Algorithm.cpp  Base64Algorithm.hpp  BaseAlgorithm.cpp  BaseAlgorithm.hpp  ConversionAlgorithm.cpp  ConversionAlgorithm.hpp  ConversionAlgorithmInterface.hpp  HexAlgorithm.cpp  HexAlgorithm.hpp
src/conversion/helper/: MessageBuilder.cpp  MessageBuilder.hpp
src/view/signal_handler/: .#MainSignalHandler.hpp  MainSignalHandler.cpp  MainSignalHandler.hpp
src/view/window/: .#DecodedTextArea.cpp  DecodedTextArea.cpp  DecodedTextArea.hpp  EncodedTextArea.cpp  EncodedTextArea.hpp  MainWindow.cpp  MainWindow.hpp  TextAreaBase.cpp  TextAreaBase.hpp  ValueComboBox.cpp  ValueComboBox.hpp
test/: CMakeLists.txt  Makefile
test/data/message_multi_files/: first_file.proto  second_file.proto
test/data/message_nested/: nested.proto
test/data/message_nested_multi_files/: inner.proto  outer.proto
test/data/message_single_file/: single_file.proto
test/src/: ConversionAlgorithmTest.cpp  ConversionAlgorithmTest.hpp  ProtoBufConverterTest.cpp  ProtoBufConverterTest.hpp
