cmake_minimum_required (VERSION 2.8)

project (protobuf-decoder)

SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 1)
SET(PATCH_VERSION 0)
SET(VERSION_SUFFIX "-alpha")

set (CMAKE_CXX_STANDARD_REQUIRED 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#set(CMAKE_BUILD_TYPE Release)
set(STR_VERSION "v${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}${VERSION_SUFFIX}")

set(CPACK_BUNDLE_NAME "protobuf-decoder")
set(CPACK_BUNDLE_STARTUP_COMMAND src/protobuf-decoder)
set(CPACK_BUNDLE_PLIST "osx_deploy/Info.plist")
set(CPACK_BUNDLE_ICON "osx_deploy/icon.icns")

# DEB package config
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Andreas Bulling <andreas@bulling.se>")
SET(CPACK_PACKAGE_DESCRIPTION "Decode/encode google protobufs.")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Decode/encode google protobufs.")
SET(CPACK_PACKAGE_VENDOR "Andreas Bulling")
SET(CPACK_PACKAGE_CONTACT "andreas@bulling.se")
SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${STR_VERSION}_${CMAKE_SYSTEM_PROCESSOR}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${STR_VERSION}_${CMAKE_SYSTEM_PROCESSOR}")
 
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libprotoc-dev (>= 2.5.0), libprotobuf-dev (>= 2.5.0), libstdc++6 (>= 4.2.1)")
 
SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
SET(CPACK_COMPONENTS_ALL Libraries ApplicationData)
add_subdirectory (src) 

add_subdirectory (test)
enable_testing ()

add_test (NAME MyTest COMMAND protobuf-decoder_test)

INCLUDE(CPack)
